added Qt GUI application

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,8 @@
 INCLUDE(${QT_USE_FILE})
+ADD_DEFINITIONS(${QT_DEFINITIONS})
 
 ADD_SUBDIRECTORY(core)
+ADD_SUBDIRECTORY(gui)
 
 ADD_EXECUTABLE(piet test.cpp)
 TARGET_LINK_LIBRARIES(piet PietCore)
