reengineering piet core lib

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,5 +4,5 @@ ADD_DEFINITIONS(${QT_DEFINITIONS})
 ADD_SUBDIRECTORY(core)
 ADD_SUBDIRECTORY(gui)
 
-ADD_EXECUTABLE(piet test.cpp)
-TARGET_LINK_LIBRARIES(piet PietCore)
+ADD_EXECUTABLE(piet-console console.cpp)
+TARGET_LINK_LIBRARIES(piet-console PietCore)
