--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,9 @@ compiler:
 install:
   - sudo apt-get update
   - sudo apt-get install libqt4-dev qt4-qmake
+  - sudo apt-get install cmake
 
-script: make
+script: mkdir build && cd build && cmake .. && make
 
 notifications:
   email:
